@@ -11,6 +11,7 @@ debsig-verify (0.9) UNRELEASED; urgency=low
   * Mark debsig-verify as Enhances dpkg.
   * Sync Priority with archive override (from standard to optional).
   * Use $(CURDIR) instead of $(shell pwd) in debian/rules.
+  * Honour user CPPFLAGS, CFLAGS and LDFLAGS.
 
  -- Guillem Jover <guillem@debian.org>  Sun, 11 May 2014 05:35:13 +0200
 
